Seção "Map" e rodapé
Criando a seção "Map" e o rodapé do site.

--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
                 <nav>
                     <ul>
                         <li><a href="">home</a></li>
-                        <li><a href="">about us</a></li>
-                        <li><a href="">services</a></li>
-                        <li><a href="">our projects</a></li>
-                        <li><a href="">our team</a></li>
-                        <li><a href="">happy clients</a></li>
-                        <li><a href="">price</a></li>
-                        <li><a href="">some facts</a></li>
-                        <li><a href="">contact us</a></li>
+                        <li><a href="#about_us">about us</a></li>
+                        <li><a href="#services">services</a></li>
+                        <li><a href="#projects">our projects</a></li>
+                        <li><a href="#team">our team</a></li>
+                        <li><a href="#clients">happy clients</a></li>
+                        <li><a href="#price">price</a></li>
+                        <li><a href="#facts">some facts</a></li>
+                        <li><a href="#contact">contact us</a></li>
                     </ul>
                 </nav>
             </div>
@@ -73,7 +73,7 @@
             </div>
         </section>
 
-        <section class="default light">
+        <section id="about_us" class="default light">
             <div class="section_title">about us</div>
             <div class="section_description">who we are?</div>
             <div class="section_body">
@@ -97,7 +97,7 @@
             </div>
         </section>
 
-        <section class="default dark">
+        <section id="services" class="default dark">
             <div class="section_title">Services</div>
             <div class="section_description">Services that we provide</div>
             <div class="section_body">
@@ -126,7 +126,7 @@
             </div>
         </section>
 
-        <section class="default light">
+        <section id="projects" class="default light">
             <div class="section_title">our projects</div>
             <div class="section_description">what we create</div>
             <div class="section_body">
@@ -259,7 +259,7 @@
             </div>
         </section>
 
-        <section class="default dark bg-team">
+        <section id="team" class="default dark bg-team">
             <div class="section_team_area">
                 <div class="section_title">Our Team</div>
                 <div class="section_description">our co-workers</div>
@@ -319,7 +319,7 @@
             </div>
         </section>
 
-        <section class="default light">
+        <section id="clients" class="default light">
             <div class="section_clients_area">
                 <div class="section_title">happy clients</div>
                 <div class="section_description">client reviews</div>
@@ -385,7 +385,7 @@
             </div>
         </section>
 
-        <section class="default light_darker">
+        <section id="price" class="default light_darker">
             <div class="section_prices_area">
                 <div class="section_title">price</div>
                 <div class="section_description">pricing table</div>
@@ -507,7 +507,7 @@
             </div>
         </section>
 
-        <section class="default dark">
+        <section id="facts" class="default dark">
             <div class="section_title">Some facts</div>
             <div class="section_description">about our work</div>
             <div class="section_body">
@@ -585,7 +585,7 @@
             </div>
         </section>
 
-        <section class="default light">
+        <section id="contact" class="default light">
             <div class="section_message_area">
                 <div class="section_title">contact us</div>
                 <div class="section_description">our agency located in Melbourne, Australia</div>
@@ -604,9 +604,69 @@
             </div>
         </section>
 
+        <section class="section_map">
+            <div class="section_map_area">
+                <div class="section_map_info">
+                    <div class="secction_map_item">
+                        <div class="secction_map_item_img">
+                            <img src="assets/images/carta.png">
+                        </div>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                    </div>
+                    <div class="secction_map_item">
+                        <div class="secction_map_item_img">
+                            <img src="assets/images/localizacao.png">
+                        </div>
+                        <p>Temporibus cupiditate necessitatibus quo odio.</p>
+                    </div>
+                    <div class="secction_map_item">
+                        <div class="secction_map_item_img">
+                            <img src="assets/images/telefone.png">
+                        </div>
+                        <p>+00 0 1234 5678</p>
+                    </div>
+                    <div class="secction_map_item">
+                        <div class="secction_map_item_img">
+                            <img src="assets/images/arroba.png">
+                        </div>
+                        <p>email@email.com</p>
+                    </div>
+                    <div class="secction_map_item">
+                        <div class="secction_map_item_img">
+                            <img src="assets/images/web.png">
+                        </div>
+                        <p>www.site.site.com</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
     </main>
 
     <footer>
+
+        <div class="default dark">
+
+            <div class="footer_area">
+                <div class="footer_social">
+                    <div class="footer_social_area">
+                        <a href=""><img src="assets/images/twitter.png"></a>
+                        <a href=""><img src="assets/images/linkedin.png"></a>
+                        <a href=""><img src="assets/images/facebook.png"></a>
+                        <a href=""><img src="assets/images/googleplus.png"></a>
+                        <a href=""><img src="assets/images/pinterest.png"></a>
+                    </div>
+                    <p>AWAX &copy 2020</p>
+                </div>
+                <div class="footer_info">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat sed beatae molestias voluptatibus dignissimos, eligendi nostrum itaque velit? Itaque laborum, consequuntur et architecto rem laudantium libero atque ex eveniet illo. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestias, rem nam. Praesentium deleniti reprehenderit cum quibusdam doloremque aspernatur.</p>
+                </div>
+                <div class="footer_subscribe">
+                    <input type="email" name="subscribe" placeholder="email, to subscribe">
+                    <a class="button" href="">subscribe</a>
+                </div>
+            </div>
+        </div>
 
     </footer>
 
