--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0">
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700&display=swap" rel="stylesheet">
@@ -21,6 +21,7 @@
                 <p>&#10054</p>
             </div>
             <div class="menu">
+                <img class="menu_opener" src="assets/images/menu.png" >
                 <nav>
                     <ul>
                         <li><a href="">home</a></li>
@@ -607,32 +608,32 @@
         <section class="section_map">
             <div class="section_map_area">
                 <div class="section_map_info">
-                    <div class="secction_map_item">
-                        <div class="secction_map_item_img">
+                    <div class="section_map_item">
+                        <div class="section_map_item_img">
                             <img src="assets/images/carta.png">
                         </div>
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
                     </div>
-                    <div class="secction_map_item">
-                        <div class="secction_map_item_img">
+                    <div class="section_map_item">
+                        <div class="section_map_item_img">
                             <img src="assets/images/localizacao.png">
                         </div>
                         <p>Temporibus cupiditate necessitatibus quo odio.</p>
                     </div>
-                    <div class="secction_map_item">
-                        <div class="secction_map_item_img">
+                    <div class="section_map_item">
+                        <div class="section_map_item_img">
                             <img src="assets/images/telefone.png">
                         </div>
                         <p>+00 0 1234 5678</p>
                     </div>
-                    <div class="secction_map_item">
-                        <div class="secction_map_item_img">
+                    <div class="section_map_item">
+                        <div class="section_map_item_img">
                             <img src="assets/images/arroba.png">
                         </div>
                         <p>email@email.com</p>
                     </div>
-                    <div class="secction_map_item">
-                        <div class="secction_map_item_img">
+                    <div class="section_map_item">
+                        <div class="section_map_item_img">
                             <img src="assets/images/web.png">
                         </div>
                         <p>www.site.site.com</p>
